# coupon-manager

./: .coverage  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
k8s/: configmap.yaml  deployment.yaml  service.yaml
monitoring/: grafana-dashboard.json  prometheus.yml
perf/: load-test.js  report.md
postman/: collection.json
src/: main.py  models.py
src/services/: s3_service.py
src/static/: index.html
tests/: conftest.py  factories.py  test_integration.py  test_unit.py
tests/e2e/: test_e2e.py
